WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270516
REGRESSION(
263237@main
): [WPE] Identifiers for touch points are not constant in multi touch
https://bugs.webkit.org/show_bug.cgi?id=270516
Summary
REGRESSION(263237@main): [WPE] Identifiers for touch points are not constant ...
gebausim
Reported
2024-03-05 06:27:43 PST
Created
attachment 470180
[details]
Showcase Propably the best way to showcase this is via
https://people.igalia.com/clopez/wkbug/pointer-events/paint.html
page (as shown in the attached screenshot). Reproduced by simultaneously doing the snake move with one finger on the right and multiple lines with the other hand. What is expected is the first touch not to be influenced by the other ones and remain the same color/id (red) all the way. Same issue can also be observed in
https://patrickhlauke.github.io/touch/tracker/multi-touch-tracker-index.html
page. Where the identifier numbers rapidly change between all the currently active touch ids. Happens since:
https://github.com/WebKit/WebKit/commit/84e4a4ae1e8936da66c30862be411246417d44fd
The effects of this are that any javascript pan or zoom gestures don't work properly, can be tested on
https://elmarquis.github.io/Leaflet.GestureHandling/examples/
. Zooming on the map is just very funky.
Attachments
Showcase
(554.20 KB, image/png)
2024-03-05 06:27 PST
,
gebausim
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
gebausim
Comment 1
2024-03-08 02:38:45 PST
Actually
https://github.com/WebKit/WebKit/commit/057b735cbf912f620273106541f2196191c5aa53
seems to be the cause as simply reverting this fixes the issues with maps etc.
Adrian Perez
Comment 2
2024-03-27 02:01:20 PDT
(In reply to gebausim from
comment #1
)
> Actually >
https://github.com/WebKit/WebKit/commit/
> 057b735cbf912f620273106541f2196191c5aa53 seems to be the cause as simply > reverting this fixes the issues with maps etc.
I see you have added the “[Gtk]” tag in the bug summary, but this commit only affects WPE. Can you confirm that the regression affects the WPE port? Or does it also affect the GTK port (so: both affected) but reverting that commit fixes WPE (and GTK still would have issues)? At any rate, thanks for the bug report and the investigation to find the possible cause.
gebausim
Comment 3
2024-03-27 04:34:55 PDT
(In reply to Adrian Perez from
comment #2
)
> (In reply to gebausim from
comment #1
) > > Actually > >
https://github.com/WebKit/WebKit/commit/
> > 057b735cbf912f620273106541f2196191c5aa53 seems to be the cause as simply > > reverting this fixes the issues with maps etc. > > I see you have added the “[Gtk]” tag in the bug summary, but this commit > only affects WPE. Can you confirm that the regression affects the WPE port? > Or does it also affect the GTK port (so: both affected) but reverting that > commit fixes WPE (and GTK still would have issues)? > > At any rate, thanks for the bug report and the investigation to find the > possible cause.
Someone else added the added the GTK tag, Initially I was testing WPE only. I compiled the latest WPEWebKit from main(8603570132a8) and the issue is still there and also cog constantly keeps crashing on touch_on_up assert. I tried Epiphany and it's also broken although in a different way. On
https://elmarquis.github.io/Leaflet.GestureHandling/examples/
zooming on the map without mouse is impossible. I can't get
https://people.igalia.com/clopez/wkbug/pointer-events/paint.html
to work at all, but on
https://touchscreentest.com/
the issue with one touch color influencing other can be seen. Reverting the commit does fix the issues, but also restores the touch IDs starting from 0 with every new touch group, not sure if any websites rely on the proper behavior. I could not find any that it would break.
Adrian Perez
Comment 4
2024-03-27 04:58:54 PDT
Great, thanks for confirming. I have also added the [WPE] tag accordingly.
gebausim
Comment 5
2024-03-27 05:05:11 PDT
To add a bit more info on the GTK side, I compiled WebKitGTK main(8603570132a8) and reverting the offending commit does nothing. Same odd behavior as in my systems Epiphany.
Adrian Perez
Comment 6
2024-03-27 06:26:28 PDT
(In reply to gebausim from
comment #5
)
> To add a bit more info on the GTK side, I compiled WebKitGTK > main(8603570132a8) and reverting the offending commit does nothing. Same odd > behavior as in my systems Epiphany.
That's what I would expect, given that the patch that caused the regression for WPE (
263969@main
) does not touch anything used by the GTK port. Probably the issue with GTK is a different one that has similar symptoms. Thanks for commenting!
Carlos Alberto Lopez Perez
Comment 7
2024-07-17 15:27:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30926
Pablo Saavedra
Comment 8
2024-11-15 00:57:38 PST
Carlos's patch works fine (see: [GitHub link](
https://github.com/WebKit/WebKit/pull/30926#issuecomment-2478256424
)). I wonder if we're missing something else preventing this change from landing, or if there's a setback I haven't considered.
EWS
Comment 9
2024-11-25 18:12:54 PST
Committed
287077@main
(363198dfec40): <
https://commits.webkit.org/287077@main
> Reviewed commits have been landed. Closing PR #30926 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug